update swagger and add get user accounts
